--- a/app/views/instructors/users/index.html.erb
+++ b/app/views/instructors/users/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="users col-md-8 offset-md-2 col-10 offset-1">
+    <div class="users col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12">
       <h2 class="border-heading-bottom mb-5">会員一覧</h2>
       <div class="text-right">
         <button class="btn dropdown-toggle text-light mb-2" type="button" id="user-select-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
