--- a/app/views/instructors/users/show.html.erb
+++ b/app/views/instructors/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="user-detail col-md-8 offset-md-2 col-10 offset-1">
+    <div class="user-detail col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 mb-5">
       <h2 class="border-heading-bottom mb-5"><%= @user.fullname %>さんの詳細</h2>
       <div class="user-info px-5">
         <table class="table table-borderless">
