--- a/app/views/public/cards/new.html.erb
+++ b/app/views/public/cards/new.html.erb
@@ -6,7 +6,7 @@
 <div id="wrap">
   <div class="container">
     <div class="row">
-      <div class="card-page col-8 offset-2">
+      <div class="card-page col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12">
         <h2 class="border-heading-bottom">クレジットカード情報入力</h2>
         <div class="card-form col-12 col-lg-10 offset-lg-1 my-5 pt-5">
           <%= form_with model: @card, url: cards_path, id: 'card-form', method: :post do |f| %>
