--- a/app/views/public/cards/show.html.erb
+++ b/app/views/public/cards/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="card-info col-8 offset-2">
+    <div class="card-info col-lg-8 offset-lg-2 col-md-10 offset-md-1 mb-5 pb-5">
       <h2 class="border-heading-bottom card-info-heading">ご登録カード情報</h2>
       <div class="card-info-content mt-5">
         <div class="card-number">
