--- a/app/views/public/reservations/index.html.erb
+++ b/app/views/public/reservations/index.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="js-error-message"></div>
   <div class="row">
-    <div class="reservations my-5">
+    <div class="reservations my-5 p-5 p-md-0">
       <h2 class="border-heading-bottom mb-5">レッスン予約状況（インストラクター：<%= @instructor.name %>）</h2>
       <p>
         ※ 空き状況を確認し、レッスンご受講の希望日をクリックしてご希望のレッスン開始時間を選択してください。（レッスン実施時間は１時間です。） <br>
