--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
   <%= render 'shared/error_messages', obj: @user %>
   <div class="row">
-    <div class="user-edit col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 mb-5 pb-5">
+    <div class="user-edit col-xl-8 offset-xl-2 col-md-10 offset-md-1 col-12 mb-5 pb-5">
       <h2 class="border-heading-bottom mb-5">ご登録情報編集</h2>
       <div class="col-10 offset-1">
         <%= form_with model: current_user, url: users_information_path, id: 'user-form', local: true do |f| %>
@@ -13,7 +13,7 @@
             <%= f.label 'お名前' %><span class="essential-icon">必須</span>
             <div class="row mt-2 pl-4">
               <%= f.label :firstname, '（姓）', class: 'pt-1 pr-2' %>
-              <%= f.text_field :firstname, autocomplete: 'firstname', placeholder: '例：山田', class: 'form-control col-lg-4 col-10 validate[required] mr-md-5' %>
+              <%= f.text_field :firstname, autocomplete: 'firstname', placeholder: '例：山田', class: 'form-control col-lg-4 col-10 validate[required] mr-lg-5' %>
               <%= f.label :lastname, '（名）', class: 'pt-1 pr-2 mt-4 mt-lg-0' %>
               <%= f.text_field :lastname, autocomplete: 'lastname', placeholder: '例：太郎', class: 'form-control col-lg-4 col-10 validate[required] mt-4 mt-lg-0' %>
             </div>
@@ -22,7 +22,7 @@
             <%= f.label 'フリガナ' %><span class="essential-icon">必須</span>
             <div class="row mt-2 pl-4">
               <%= f.label :kana_firstname, '（姓）', class: 'pt-1 pr-2' %>
-              <%= f.text_field :kana_firstname, autocomplete: 'kana_firstname', placeholder: '例：ヤマダ', class: 'form-control col-lg-4 col-10 validate[required, custom[katakana]] mr-md-5' %>
+              <%= f.text_field :kana_firstname, autocomplete: 'kana_firstname', placeholder: '例：ヤマダ', class: 'form-control col-lg-4 col-10 validate[required, custom[katakana]] mr-lg-5' %>
               <%= f.label :kana_lastname, '（名）', class: 'pt-1 pr-2 mt-4 mt-lg-0' %>
               <%= f.text_field :kana_lastname, autocomplete: 'kana_lastname', placeholder: '例：タロウ', class: 'form-control col-lg-4 col-10 validate[required, custom[katakana]] mt-4 mt-lg-0' %>
             </div>
