--- a/app/views/instructors/search/search.html.erb
+++ b/app/views/instructors/search/search.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="search col-md-8 offset-md-2 col-10 offset-1">
+    <div class="search col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12">
       <h2 class="border-heading-bottom mb-5">検索結果</h2>
       <%= render 'shared/instructors-users', users: @users %>
       <%= paginate @users %>
