--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -4,17 +4,17 @@
 
 <div class="container">
   <div class="row">
-    <div class="contact col-10 offset-1">
+    <div class="contact col-lg-10 offset-lg-1 col-12">
       <h2 class="border-heading-bottom mb-5">お問い合わせフォーム</h2>
       <div class="contact-form col-10 offset-1">
         <%= form_with model: @contact, url: confirm_path, id: 'contact-form', local: true do |f| %>
           <div class="form-group">
             <%= f.label :name, "お名前" %><span class="essential-icon">必須</span>
-            <%= f.text_field :name, autocomplete: 'name', placeholder: '例：令和 道子', class: 'form-control col-5 validate[required] mt-2' %>
+            <%= f.text_field :name, autocomplete: 'name', placeholder: '例：令和 道子', class: 'form-control col-sm-5 col-6 validate[required] mt-2' %>
           </div>
           <div class="form-group mt-5">
             <%= f.label :email, "メールアドレス" %><span class="essential-icon">必須</span>
-            <%= f.email_field :email, autocomplete: 'email', placeholder: '例：lybody@example.com', class: 'form-control col-5 validate[required, custom[email]] mt-2' %>
+            <%= f.email_field :email, autocomplete: 'email', placeholder: '例：lybody@example.com', class: 'form-control col-sm-5 col-8 validate[required, custom[email]] mt-2' %>
           </div>
           <div class="form-group mt-5">
             <%= f.label :message, "お問い合わせ内容" %><span class="essential-icon">必須</span>
