--- a/app/views/public/rooms/show.html.erb
+++ b/app/views/public/rooms/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="user-chat-page col-10 offset-1" id="chat-window" style="overflow: scroll;height: 620px;">
+    <div class="user-chat-page col-lg-10 offset-lg-1" id="chat-window">
       <h2 class="border-heading-bottom mb-5">チャット（<%= @room.instructor.name %>）</h2>
       <div id="chat-wrap">
         <%= render 'chat-content', chats: @chats, room: @room %>
