--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -4,10 +4,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="unsubscribe col-8 offset-2">
+    <div class="unsubscribe col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 mb-5">
       <h2 class="border-heading-bottom mb-5">退会確認</h2>
       <h4 class="text-center pt-4 mb-5">本当に退会しますか？</h4>
-      <div class="unsubscribe-text border text-center p-4 col-8 offset-2">
+      <div class="unsubscribe-text border text-center p-4 col-md-8 offset-md-2 col-10 offset-1">
         <p class="mb-0">
           退会すると、ご登録情報が閲覧できなくなり <br>
           レッスンのご予約・ご受講もできなくなります。 <br>
