--- a/app/views/instructors/instructors/show.html.erb
+++ b/app/views/instructors/instructors/show.html.erb
@@ -99,7 +99,7 @@
                             <%= form_with model: reservation, url: instructors_reservation_path(reservation), local: true do |f| %>
                               <%= f.label :start_time, "変更後予約日時（開始時間）" %> <br>
                               <%= f.datetime_select :start_time, { start_year: Time.now.year, end_year: Time.now.year + 2, use_month_numbers:true, start_hour: 9, end_hour: 22, minute_step: 60, date_separator:'/' }, { class: 'form-control mx-2', style: 'display: inline-block;width: auto;' } %>
-                              <%= f.submit "変更する", class: 'btn btn-outline-dark ml-2', style: "vertical-align: unset;" %>
+                              <%= f.submit "変更する", class: 'btn btn-outline-dark ml-2', style: "vertical-align: unset;", id: 'modal-submit' %>
                             <% end %>
                           </div>
                         </div>
