--- a/app/views/instructors/instructors/show.html.erb
+++ b/app/views/instructors/instructors/show.html.erb
@@ -119,7 +119,7 @@
       </div>
       <div class="reviews border-bottom my-5">
         <h4 class="border-heading-side mb-5 mt-5">レビュー</h4>
-        <% if @instructor.reviews.present? %>
+        <% if @reviews.present? %>
           <table class="table table-borderless table-sm col-10 offset-1 mb-5">
             <thead class="border-bottom">
               <tr>
@@ -130,7 +130,7 @@
               </tr>
             </thead>
             <tbody>
-              <% @instructor.reviews.each do |review| %>
+              <% @reviews.each do |review| %>
                 <tr class="review-tr">
                   <td class="pl-3"><%= review.user.fullname %></td>
                   <td><%= review.comment %></td>
