--- a/app/views/public/instructors/show.html.erb
+++ b/app/views/public/instructors/show.html.erb
@@ -49,9 +49,9 @@
       <% end %>
       <div class="review mt-5 pt-5 col-lg-10 offset-lg-1 col-12">
         <h4 class="border-heading-bottom mb-4"><i class="far fa-comments"></i> レッスンレビュー</h4>
-        <p id="reviews-count" class="text-right mr-4">レビュー件数：<%= @instructor.reviews.count %>件</p>
+        <p id="reviews-count" class="text-right mr-4">レビュー件数：<%= @reviews.count %>件</p>
         <div id="review-content-<%= @instructor.id %>" class="p-5 mt-3">
-          <%= render 'public/reviews/review-content', instructor: @instructor %>
+          <%= render 'public/reviews/review-content', reviews: @reviews %>
         </div>
         <% if user_signed_in? %>
           <h4 class="border-heading-side mt-3 mb-5">レビューを投稿する</h4>
