--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -120,7 +120,7 @@
       </div>
       <div class="reviews border-bottom my-5">
         <h4 class="border-heading-side mb-5 mt-5">投稿したレビュー</h4>
-        <% if @user.reviews.present? %>
+        <% if @reviews.present? %>
           <table class="table table-borderless table-sm col-sm-10 offset-sm-1 col-12 mb-5">
             <thead class="border-bottom">
               <tr>
@@ -131,7 +131,7 @@
               </tr>
             </thead>
             <tbody>
-              <% @user.reviews.each do |review| %>
+              <% @reviews.each do |review| %>
                 <tr class="review-tr">
                   <td class="pl-3"><%= review.created_at.strftime('%Y/%m/%d') %></td>
                   <td>
